fixed vertical align/positioning

--- a/style.css
+++ b/style.css
@@ -11,28 +11,41 @@ p {
 h1, h2, h3, h4, h5, h6 {
 	font-family: Karla;
 }
+h3 {
+	margin-bottom: 1em;
+	cursor: pointer;
+}
 .row {
 	max-width: 600px;
 	height: auto;
 	margin: 1em auto 1em;
+	border-bottom: 1px solid #e7e7e7;
 }
 .panel {
 	padding: 1em;
 }
 .picture-container {
-	height: 500px;
+	position: relative;
+	height: 442px;
+	overflow: hidden;
+}
+.picture-container p {
+	position: absolute;
+	text-align: center;
+	width: 100%;
+	bottom: 0px;
+	margin: 1.8em auto 1.8em;
 }
 img#picture {
 	width: auto;
 	height: auto;
 	max-width: 400px;
 	max-height: 400px;
-	margin: 1.8em auto 1.8em;
 }
 .arrow-container {
 	position: relative;
 	left: 0px;
-	top: 0px;
+	top: -28px;
 	width: 100%;
 	color: #00994d;
 }
@@ -62,12 +75,12 @@ table.calendar td {
 	margin: 0 auto;
 	width: 600px;
 	height: 700px;
-	padding: 1em;
-	overflow-x: hidden;
+	overflow: hidden;
+	margin-bottom: 5em;
 }
 @media screen and (min-height: 700px) {
     .calendar-display {
-        height: 76px;
+        height: 120px;
     }
 }
 .tall {
@@ -138,4 +151,21 @@ ul.calendar-list {
 }
 .active {
 	color: #666666 !important;
+}
+.footer {
+	position: relative;
+	top: 100px;
+	margin-top: 3em;
+	border-top: 1px solid #e7e7e7;
+	background-color: #ffffe6;
+	padding: 3em 0em 2em 0em;
+	text-align: center;
+	font-size: 0.75em;
+}
+.long {
+	top: 700px !important;
+}
+.footer a {
+	color: #696969;
+	text-decoration: none;
 }
